<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_label">Settings</string>
    <string name="more_settings_label">More</string>
    <string name="display_settings">Display</string>
    <string name="brightness">Brightness level</string>
    <string name="auto_brightness_title">Adaptive brightness</string>
    <string name="auto_brightness_summary">Optimize brightness level for available light</string>
    <string name="condition_night_display_title">Night Light is on</string>
    <string name="keywords_display">screen, touchscreen</string>
    <string name="keywords_display_brightness_level">dim screen, touchscreen, battery</string>
    <string name="keywords_display_auto_brightness">dim screen, touchscreen, battery</string>
    <string name="keywords_display_night_display">dim screen, night, tint</string>
    <string name="night_mode_tile_label">Night mode</string>
    <string name="network_and_internet">Network &amp; internet</string>
    <string name="mobile_network_settings">Mobile network</string>
    <plurals name="mobile_network_summary_count">
        <item quantity="one"><xliff:g id="count" example="1">%1$d</xliff:g> SIM</item>
        <item quantity="other"><xliff:g id="count" example="2">%1$d</xliff:g> SIMs</item>
    </plurals>
    <string name="mobile_network_active_sim">Active / SIM</string>
    <string name="mobile_network_inactive_sim">Inactive / SIM</string>
    <string name="mobile_network_active_esim">Active / Downloaded SIM</string>
    <string name="mobile_network_inactive_esim">Inactive / Downloaded SIM</string>
    <string name="mobile_network_list_add_more">Add more</string>
    <string name="mobile_network_toggle_title">Mobile data</string>
    <string name="mobile_network_toggle_summary">Access data using mobile network</string>
    <string name="confirm_mobile_data_disable">Turn off mobile data?</string>
    <string name="sim_selection_required_pref">Selection required</string>
    <string name="sim_change_data_title">
        Use <xliff:g id="carrier" example="Google Fi">%1$s</xliff:g> for mobile data?
    </string>
    <string name="sim_change_data_message">
        You\u0027re using <xliff:g id="carrier2" example="Google Fi">%2$s</xliff:g> for mobile data.
        If you switch to <xliff:g id="carrier1" example="Verizon">%1$s</xliff:g>,
        <xliff:g id="carrier2" example="Google Fi">%2$s</xliff:g> will no longer be used for mobile
        data.
    </string>
    <string name="sim_change_data_ok">
        Use <xliff:g id="carrier" example="Verizon">%1$s</xliff:g>
    </string>
    <string name="roaming_title">Roaming</string>
    <string name="roaming_summary">Connect to data services when roaming</string>
    <string name="roaming_alert_title">Allow data roaming?</string>
    <string name="roaming_warning">You may incur significant charges.</string>
    <string name="data_usage_settings">Data usage</string>
    <string name="data_usage_title">Primary data</string>
    <string name="data_used_formatted"><xliff:g name="value" example="500">^1</xliff:g> <xliff:g name="units" example="GB">^2</xliff:g> used</string>
    <string name="cell_data_warning"><xliff:g name="amount" example="1 GB">^1</xliff:g> data warning</string>
    <string name="cell_data_limit"><xliff:g name="amount" example="1 GB">^1</xliff:g> data limit</string>
    <string name="cell_data_warning_and_limit"><xliff:g name="amount" example="1 GB">^1</xliff:g> data warning / <xliff:g name="amount" example="2 GB">^2</xliff:g> data limit</string>
    <plurals name="billing_cycle_days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="billing_cycle_none_left">No time remaining</string>
    <string name="billing_cycle_less_than_one_day_left">Less than 1 day left</string>
    <string name="carrier_and_update_text">Updated by <xliff:g name="carrier" example="Google Fi">^1</xliff:g> <xliff:g name="time" example="3m">^2</xliff:g> ago</string>
    <string name="no_carrier_update_text">Updated <xliff:g name="time" example="3m">^2</xliff:g> ago</string>
    <string name="carrier_and_update_now_text">Updated by <xliff:g name="carrier" example="Google Fi">^1</xliff:g> just now</string>
    <string name="no_carrier_update_now_text">Updated just now</string>
    <string name="launch_manage_plan_text">View plan</string>
    <string name="app_data_usage">App data usage</string>
    <string name="data_usage_app_restricted">restricted</string>
    <string name="cycle_reset_day_of_month_picker_title">Usage cycle reset date</string>
    <string name="cycle_reset_day_of_month_picker_subtitle">Date of each month:</string>
    <string name="cycle_reset_day_of_month_picker_positive_button">Set</string>
    <string name="data_warning_limit_title">Data warning &amp; limit</string>
    <string name="app_usage_cycle">App data usage cycle</string>
    <string name="set_data_warning">Set data warning</string>
    <string name="data_warning">Data warning</string>
    <string name="set_data_limit">Set data limit</string>
    <string name="data_limit">Data limit</string>
    <string name="data_usage_limit_dialog_title">Limiting data usage</string>
    <string name="data_usage_limit_dialog_mobile" >Your vehicle\u2019s head unit will turn off mobile data once it reaches the limit you set.\n\nSince data usage is measured by the head unit, and your carrier may account for usage differently, consider setting a conservative limit.</string>
    <string name="data_usage_warning_editor_title">Set data usage warning</string>
    <string name="data_usage_limit_editor_title">Set data usage limit</string>
    <string name="usage_bytes_threshold_picker_positive_button">Set</string>
    <string-array name="bytes_picker_sizes" translatable="false">
        <item>@*android:string/megabyteShort</item>
        <item>@*android:string/gigabyteShort</item>
    </string-array>
    <string name="wifi_settings">Wi\u2011Fi</string>
    <string name="wifi_starting">Turning Wi\u2011Fi on\u2026</string>
    <string name="wifi_stopping">Turning off Wi\u2011Fi\u2026</string>
    <string name="loading_wifi_list">Loading Wi\u2011Fi list</string>
    <string name="wifi_disabled">Wi\u2011Fi disabled</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_setup_add_network">Add network</string>
    <string name="wifi_setup_connect">Connect</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_no_network_name">Please enter a network name</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_signal_strength">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="wifi_frequency">Frequency</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="show_password">Show password</string>
    <string name="default_network_name_summary">Enter network name</string>
    <string name="default_password_summary">Enter password</string>
    <string name="access_point_tag_key">access_point_tag_key</string>
    <string-array name="wifi_signals">
        <item>Poor</item>
        <item>Poor</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="link_speed">%1$d Mbps</string>
    <string name="wifi_band_24ghz">2.4 GHz</string>
    <string name="wifi_band_5ghz">5 GHz</string>
    <string name="wifi_network_detail">Network details</string>
    <string name="wifi_mac_address">MAC address</string>
    <string name="wifi_ip_address_title">IP address</string>
    <string name="wifi_subnet_mask">Subnet mask</string>
    <string name="wifi_dns">DNS</string>
    <string name="wifi_details_ipv6_address_header">IPv6 addresses</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_preferences_title">Wi\u2011Fi preferences</string>
    <string name="wifi_wakeup">Turn on Wi\u2011Fi automatically</string>
    <string name="wifi_wakeup_summary">Wi\u2011Fi will turn back on near high\u2011quality saved networks, like your home network</string>
    <string name="wifi_wakeup_summary_no_location">Unavailable because location is turned off. Turn on <annotation id="link">location</annotation>.</string>
    <string name="wifi_settings_scanning_required_title">Turn on Wi\u2011Fi scanning?</string>
    <string name="wifi_settings_scanning_required_turn_on">Turn on</string>
    <string name="wifi_settings_scanning_required_enabled">Wi\u2011Fi scanning turned on</string>
    <string name="wifi_cellular_fallback_title">Switch to mobile data automatically</string>
    <string name="wifi_cellular_fallback_summary">Use mobile data when Wi\u2011Fi has no internet access. Data usage charges may apply.</string>
    <string name="help_uri_wifi_scanning_required" translatable="false"></string>
    <string name="learn_more">Learn more</string>
    <string name="wifi_hotspot_name_title">Hotspot name</string>
    <string name="wifi_hotspot_name_summary_connecting">Turning on <xliff:g id="wifi_hotspot_name">%1$s</xliff:g>...</string>
    <string name="wifi_hotspot_name_summary_connected">Other devices can connect to <xliff:g id="wifi_hotspot_name">%1$s</xliff:g></string>
    <string name="wifi_hotspot_password_title">Hotspot password</string>
    <string name="wifi_hotspot_security_title">Security</string>
    <string name="wifi_hotspot_wpa2_personal">WPA2-Personal</string>
    <string name="wifi_hotspot_security_none">None</string>
    <string name="wifi_hotspot_ap_band_title">AP Band</string>
    <string name="wifi_ap_band_config">Select AP Band</string>
    <string name="wifi_ap_choose_auto">Auto</string>
    <string name="wifi_ap_choose_2G">2.4 GHz Band</string>
    <string name="wifi_ap_choose_5G">5.0 GHz Band</string>
    <string name="wifi_ap_prefer_5G">5.0 GHz Band preferred</string>
    <string name="wifi_ap_2G">2.4 GHz</string>
    <string name="wifi_ap_5G">5.0 GHz</string>
    <string name="wifi_ap_band_select_one">Choose at least one band for Wi\u2011Fi hotspot:</string>
    <string name="tether_settings_title_all">Hotspot &amp; tethering</string>
    <string name="wifi_hotspot_auto_off_title">Turn off hotspot automatically</string>
    <string name="wifi_hotspot_auto_off_summary">Wi\u2011Fi hotspot will turn off if no devices are connected</string>
    <string name="bluetooth_enable_alphanumeric_pin">PIN contains letters or symbols</string>
    <string name="bluetooth_pairing_shares_phonebook">Allow <xliff:g example="Pixel" id="device_name">%1$s</xliff:g> to access your contacts and call history</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="security_lock_password">Password</string>
    <string name="lockscreen_choose_your_password">Choose your password</string>
    <string name="choose_lock_password_hints">Must be at least 4 characters</string>
    <string name="backspace_key">Backspace key</string>
    <string name="enter_key">Enter key</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
</resources>