<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Row 1 -->
    <Button
        android:id="@+id/key1"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="1"
        android:text="@string/one"/>
    <Button
        android:id="@+id/key2"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="2"
        android:text="@string/two"/>
    <Button
        android:id="@+id/key3"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="3"
        android:text="@string/three"/>

    <!-- Row 2 -->
    <Button
        android:id="@+id/key4"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="4"
        android:text="@string/four"/>
    <Button
        android:id="@+id/key5"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="5"
        android:text="@string/five"/>
    <Button
        android:id="@+id/key6"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="6"
        android:text="@string/six"/>

    <!-- Row 3 -->
    <Button
        android:id="@+id/key7"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="7"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/key8"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="8"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/key9"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="9"
        android:text="@string/nine"/>

    <!-- Row 4 -->
    <ImageButton
        android:id="@+id/key_backspace"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:contentDescription="@string/backspace_key"
        android:src="@drawable/ic_backspace"/>
    <Button
        android:id="@+id/key0"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:tag="0"
        android:text="@string/zero"/>
    <ImageButton
        android:id="@+id/key_enter"
        style="@style/PinPadKey"
        android:layout_width="@dimen/pin_pad_key_width"
        android:layout_height="@dimen/pin_pad_key_height"
        android:layout_margin="@dimen/pin_pad_key_margin"
        android:contentDescription="@string/enter_key"
        android:src="@drawable/ic_check"/>
</merge>
